<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svPage4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".auth.RegistrationPage4Fragment">

    <LinearLayout
        android:id="@+id/llPage4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_half_blk_gray"
        android:orientation="vertical"
        android:paddingBottom="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp">

            <!--            di pa gumagana-->
            <Button
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:background="@drawable/bg_circle_button"
                android:drawableStart="@drawable/ic_arrow_back"
                android:drawablePadding="0dp"
                android:drawableTint="@color/neutral_deep"
                android:elevation="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="12dp"
                android:stateListAnimator="@null"
                android:text=""
                android:textColor="@android:color/transparent"
                app:backgroundTint="@null"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvPageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Sign-up"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            android:paddingHorizontal="24dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/tvPageHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="CONTACT INFORMATION"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="Fill in the details to create your account"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_main_panel_rounded"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingTop="40dp">

            <LinearLayout
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_panel_gray_soft_rounded"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Step 4 of 5"
                    android:textColor="@color/neutral_deep"
                    android:textSize="12sp" />

            </LinearLayout>

            <!-- Contact Number Input -->
            <TextView
                android:id="@+id/tvContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/contact_no_label"
                android:textColor="@color/neutral_deep"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/sh_rounded_input"
                android:hint="e.g., 09XX-XXX-XXXX"
                android:padding="16dp"
                android:textColor="@color/neutral_deep"
                android:textSize="16sp"
                android:inputType="phone"
                android:maxLength="11" />

            <TextView
                android:id="@+id/errContactNumber"
                style="@style/ErrorTextStyle"
                android:layout_marginBottom="24dp"
                tools:text="Contact number must be 11 digits." />

            <!-- Address Group Title -->
            <TextView
                android:id="@+id/tvAddressHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="PERMANENT ADDRESS"
                android:textColor="@color/neutral_deep"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Address No. / Street Input -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="12dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:orientation="vertical"
                    android:gravity="start"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:id="@+id/tvAddressNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/house_no_label"
                        android:textColor="@color/neutral_deep"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etAddressNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="House No."

                        android:background="@drawable/sh_rounded_input"
                        android:textSize="16sp"
                        android:textColor="@color/neutral_deep"
                        android:padding="16dp"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/errAddressNo"
                        style="@style/ErrorTextStyle"
                        android:layout_marginBottom="16dp"
                        tools:text="House/Unit number is required." />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:orientation="vertical"
                    android:gravity="start">

                    <TextView
                        android:id="@+id/tvAddressStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/st_subdv_label"
                        android:textColor="@color/neutral_deep"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etAddressStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Street Name"

                        android:background="@drawable/sh_rounded_input"
                        android:textSize="16sp"
                        android:textColor="@color/neutral_deep"
                        android:padding="16dp"
                        android:inputType="text"  />

                    <TextView
                        android:id="@+id/errAddressStreet"
                        style="@style/ErrorTextStyle"
                        android:layout_marginBottom="16dp"
                        tools:text="Street is required." />
                </LinearLayout>
            </LinearLayout>

            <!-- Barangay Input -->
            <TextView
                android:id="@+id/tvAddressBarangay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brgy_label"
                android:textColor="@color/neutral_deep"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddressBarangay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="Barangay"

                android:background="@drawable/sh_rounded_input"
                android:textSize="16sp"
                android:textColor="@color/neutral_deep"
                android:padding="16dp"

                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/errAddressBarangay"
                style="@style/ErrorTextStyle"
                android:layout_marginBottom="16dp"
                tools:text="Barangay is required." />

            <!-- City Input -->
            <TextView
                android:id="@+id/tvAddressCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_mun_label"
                android:textColor="@color/neutral_deep"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddressCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="City or Municipality"

                android:background="@drawable/sh_rounded_input"
                android:textSize="16sp"
                android:textColor="@color/neutral_deep"
                android:padding="16dp"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/errAddressCity"
                style="@style/ErrorTextStyle"
                android:layout_marginBottom="16dp"
                tools:text="City is required." />

            <!-- Province Input -->
            <TextView
                android:id="@+id/tvAddressProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/province_label"
                android:textColor="@color/neutral_deep"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAddressProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:hint="Province"

                android:background="@drawable/sh_rounded_input"
                android:textSize="16sp"
                android:textColor="@color/neutral_deep"
                android:padding="16dp"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/errAddressProvince"
                style="@style/ErrorTextStyle"
                android:layout_marginBottom="16dp"
                tools:text="Province is required." />
        </LinearLayout>
    </LinearLayout>
</ScrollView>