<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svPage5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".auth.RegistrationPage5Fragment">

    <LinearLayout
        android:id="@+id/llPage5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_half_blk_gray"
        android:orientation="vertical"
        android:paddingBottom="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp">

            <!--            di pa gumagana-->
            <Button
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start"
                android:background="@drawable/bg_circle_button"
                android:drawableStart="@drawable/ic_arrow_back"
                android:drawablePadding="0dp"
                android:drawableTint="@color/neutral_deep"
                android:elevation="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingHorizontal="12dp"
                android:stateListAnimator="@null"
                android:text=""
                android:textColor="@android:color/transparent"
                app:backgroundTint="@null"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvPageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Sign-up"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="24dp"
            android:paddingHorizontal="24dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/tvPageHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="ACADEMIC INFORMATION"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="Fill in the details to create your account"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_main_panel_rounded"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingTop="40dp">

            <LinearLayout
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_panel_gray_soft_rounded"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Step 5 of 5"
                    android:textColor="@color/neutral_deep"
                    android:textSize="12sp" />

            </LinearLayout>

            <!-- Campus Branch Spinner -->
            <TextView
                android:id="@+id/tvCampusBranch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/campus_branch_label"
                android:textColor="@color/neutral_deep"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spCampusBranch"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/sp_rounded"
                android:dropDownHeight="240dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/errCampusBranch"
                style="@style/ErrorTextStyle"
                android:layout_marginBottom="12dp"
                tools:text="Please select your Campus/Branch." />

            <!-- College Spinner -->
            <TextView
                android:id="@+id/tvCollege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/college_label"
                android:textColor="@color/neutral_deep"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spCollege"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/sp_rounded"
                android:dropDownHeight="240dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/errCollege"
                style="@style/ErrorTextStyle"
                android:layout_marginBottom="16dp"
                tools:text="Please select your College." />

            <!-- Course/Program Spinner (Dynamically Loaded) -->
            <TextView
                android:id="@+id/tvCourseProgram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/course_program_label"
                android:textColor="@color/neutral_deep"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spCourseProgram"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:background="@drawable/sp_rounded"
                android:dropDownHeight="240dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/errCourseProgram"
                style="@style/ErrorTextStyle"
                android:layout_marginBottom="12dp"
                tools:text="Please select your Course/Program." />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
